Bug 920997 - printing of signature is broken, positioning of signature in document subject to bogus offset and cropping; work around bug 700003. r=Neil,r=richard.marti,ui=review=bwinton,a=Standard8 for CLOSED TREE

--- a/mail/themes/osx/mail/messageBody.css
+++ b/mail/themes/osx/mail/messageBody.css
@@ -76,9 +76,11 @@ mailattachcount {
 
 /* ::::: signature ::::: */
 
-.moz-txt-sig,
-.moz-signature {
-  opacity: 0.6;
+@media not print {
+  .moz-txt-sig,
+  .moz-signature {
+    opacity: 0.6;
+  }
 }
 
 /* ::::: attached images ::::: */
